Bug 354623 - Full charge not trigger notification
Summary: Full charge not trigger notification
Status: RESOLVED FIXED
Alias: None
Product: Powerdevil
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 5.4.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Development Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-30 22:16 UTC by Anthony Fieroni
Modified: 2015-11-14 16:58 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.5.0
Sentry Crash Report:


Attachments
Use FullyCharged instead of NoCharge (886 bytes, patch)
2015-10-31 14:34 UTC, Kai Uwe Broulik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Anthony Fieroni 2015-10-30 22:16:41 UTC
When battery is full charged, notification is not shown.

Reproducible: Always

Steps to Reproduce:
1. Systemsettings
2. Notification
3. Power Management System
4. Charge complete
5. notification or task bar entry

Actual Results:  
Notification is not triggered on full charge

Expected Results:  
Notification on battery is full charge
Comment 1 Martin Klapetek 2015-10-31 14:31:01 UTC
Confirming, I've set a sound and didn't hear one when it was charged.
Comment 2 Kai Uwe Broulik 2015-10-31 14:34:54 UTC
Created attachment 95236 [details]
Use FullyCharged instead of NoCharge

Can you try this patch?
Comment 3 Kai Uwe Broulik 2015-10-31 14:53:05 UTC
Also, please check the output of upower -d to ensure the driver actually reports "fully charged" state
Comment 4 Anthony Fieroni 2015-11-01 03:33:56 UTC
(In reply to Kai Uwe Broulik from comment #3)
> Also, please check the output of upower -d to ensure the driver actually
> reports "fully charged" state

Yes, 'upower -d' reports "fully charged".
Comment 5 Anthony Fieroni 2015-11-07 15:38:24 UTC
I update to 5.4.3 pre-release notification still not fire.
Comment 6 Kai Uwe Broulik 2015-11-07 16:01:08 UTC
Yes because nobody bothered testing the patch I attached and thus I did not commit it.
Comment 7 Martin Klapetek 2015-11-07 16:31:14 UTC
Fwiw I'm using kubuntu ci and recently stuff in /opt like kcms and kded modules stopped being found by the system, I think it has to do with the sycoca changes and I haven't figured out which paths need adjusting or what, but it's completely ignoring all of /opt when it comes to sycoca stuff.

So yeah, I haven't bothered, sorry.
Comment 8 Martin Klapetek 2015-11-07 16:31:43 UTC
But upower -d does report fully-charged.
Comment 9 Anthony Fieroni 2015-11-07 17:13:31 UTC
Commit it, it will work. I tell you upower -d report fully-charged.
Comment 10 Sebastian Kügler 2015-11-09 10:55:55 UTC
Anthony, did you test it?
Comment 11 Anthony Fieroni 2015-11-14 16:15:04 UTC
I test this patch and it works. Notification is triggered, but for some reason task bar entry not. Please tell us why?
Comment 12 Kai Uwe Broulik 2015-11-14 16:23:47 UTC
What task bar entry is supposed to be highlighted? PowerDevil is a background service.
Comment 13 Kai Uwe Broulik 2015-11-14 16:25:20 UTC
Git commit 4c66646761834236f6b14789162fe71f6179f472 by Kai Uwe Broulik.
Committed on 14/11/2015 at 16:24.
Pushed by broulik into branch 'master'.

Show fully charged message when battery state becomes "Fully charged" rather than "Not charging"
FIXED-IN: 5.5.0

M  +4    -8    daemon/powerdevilcore.cpp

http://commits.kde.org/powerdevil/4c66646761834236f6b14789162fe71f6179f472
Comment 14 Anthony Fieroni 2015-11-14 16:52:26 UTC
Notifications -> Powermanagement -> tick on notification and mark taskbar entry. Notification is triggered, taskbar entry not.
Comment 15 Kai Uwe Broulik 2015-11-14 16:58:57 UTC
Yes, because there is no window. This checkbox is mainly for, eg. chat applications, that the respective chat window is highlighted.