Show fully charged message when battery state becomes "Fully charged" rather than "Not charging"

BUG: 354623
FIXED-IN: 5.5.0